added vehicle and logbook endpoints, services
