# src/main/java/com/wiensquare/car/domain/GasolineType.java
@@ -1,7 +1,0 @@
-package com.wiensquare.car.domain;
-
-public enum GasolineType {
-
-    DIESEL, GASOLINE, HYBRID, ELECTRIC;
-
-}
